--- a/debug_util/cmd/Cargo.toml
+++ b/debug_util/cmd/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
-parser = { path = "../../libs/compiler/parser" }
+parser = { path = "../../libs/compiler/converts/parser" }
