--- a/libs/compiler/converts/parser/Cargo.toml
+++ b/libs/compiler/converts/parser/Cargo.toml
@@ -10,6 +10,6 @@ edition = "2021"
 ast = { path = "../../defs/ast" }
 
 # external dependencies
-peg = {version = "0", features = ["trace"]}
+peg = {version = "0"}
 logos = "0.13.0"
 anyhow.workspace = true
