--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ members = [
     "debug_util/cmd", # debuger
     "libs/compiler/defs/*",
     "libs/compiler/converts/*",
+    "libs/compiler/meguc_main",
+    "cli" # cli
 ]
 
 [workspace.dependencies]
