[hir] create hir base CallFunc & Literal HIR

--- a/debug_util/cmd/Cargo.toml
+++ b/debug_util/cmd/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
 parser = { path = "../../libs/compiler/converts/parser" }
+to_hir = { path = "../../libs/compiler/converts/to_hir" }
+ast = { path = "../../libs/compiler/defs/ast" }
