--- a/libs/compiler/converts/to_hir/Cargo.toml
+++ b/libs/compiler/converts/to_hir/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ast = { path = "../../defs/ast" }
+hir = { path = "../../defs/hir" }
+anyhow.workspace = true
