--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,9 +14,10 @@
             },
             "extensions": [
                 "rust-lang.rust-analyzer",
-				"vadimcn.vscode-lldb",
-				"tamasfe.even-better-toml",
-				"serayuzgur.crates"
+                "vadimcn.vscode-lldb",
+                "tamasfe.even-better-toml",
+                "serayuzgur.crates",
+                "ms-vscode.cpptools-extension-pack"
             ]
         }
     }
