add wasm tools & aidan binding
tools:
* wabt
* binaryen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "libs/compiler/converts/*",
     "libs/compiler/meguc_main",
     "libs/utils",
+    "libs/aidan-rs",
     "cli" # cli
 ]
 
