--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -45,9 +45,9 @@ jobs:
           docker build -t ${{ steps.image_tag.outputs.TAG }} ./.devcontainer
           mkdir -p ${{ steps.image_tag.outputs.CPATH }}
           docker save ${{ steps.image_tag.outputs.TAG }} > ${{ steps.image_tag.outputs.TPATH }}
-      - name: Lunch Container
+      - name: Launch Container
         run: |
-          docker run --name megulang -v ${{ github.workspace }}:/work -w /work --tty ${{ steps.image_tag.outputs.TAG }}
+          docker run --name megulang -v ${{ github.workspace }}:/work -w /work --tty -d ${{ steps.image_tag.outputs.TAG }}
       - name: Run Test
         run: |
           docker exec megulang /root/.cargo/bin/cargo test
