--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,11 +1,11 @@
-FROM ubuntu:23.10
+FROM debian:latest
 
 ARG BINARYEN_VERSION=116
 ARG BINARYEN_URL="https://github.com/WebAssembly/binaryen/releases/download/version_${BINARYEN_VERSION}/binaryen-version_${BINARYEN_VERSION}-x86_64-linux.tar.gz"
 ARG WABT_VERSION=1.0.34
 ARG WABT_URL="https://github.com/WebAssembly/wabt/releases/download/${WABT_VERSION}/wabt-${WABT_VERSION}-ubuntu.tar.gz"
 
-RUN apt-get update && apt-get install -y wget curl git clang
+RUN apt-get update && apt-get install -y wget curl git clang build-essential
 
 RUN mkdir /work
 WORKDIR /work
